--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,4 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/$REPO_NAME:$COMMIT_SHA', '-f', 'Docker', '.']
-    timeout: 120s
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/github.com/mikowals/swift-apis:$COMMIT_SHA', '-f', 'Dockerfile', '.']
+    timeout: 22s
