--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,4 +3,4 @@ steps:
     args: ['build', '-t', 'gcr.io/$PROJECT_ID/github.com/mikowals/swift-apis:$COMMIT_SHA', '-f', 'Dockerfile', '.']
 timeout: 5400s
 options:
- machineType: 'N1_HIGHCPU_8'
+ machineType: 'N1_STANDARD_8'
