--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,10 @@
 steps:
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/github.com/mikowals/swift-apis:$COMMIT_SHA', '-f', 'Dockerfile', '.']
+  - name: 'gcr.io/kaniko-project/executor:latest'
+    args:
+    - --image=gcr.io/$PROJECT_ID/image
+    - --dockerfile=./Dockerfile
+    - --context=gcr.io/$PROJECT_ID/github.com/mikowals/swift-apis:$COMMIT_SHA
+    - --cache=true
+    - --cache-ttl=6h
 timeout: 15000s
 
