--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,17 @@
 steps:
-  - name: 'gcr.io/kaniko-project/executor:latest'
-    args:
-    - --destination=gcr.io/$PROJECT_ID/image
-    - --cache=true
-    - --cache-ttl=24h
+ - name: 'gcr.io/cloud-builders/docker'
+   entrypoint: 'bash'
+   args:
+   - '-c'
+   - |
+     docker pull gcr.io/$PROJECT_ID/swift-apis:latest || exit 0
+- name: 'gcr.io/cloud-builders/docker'
+  args: [
+            'build',
+            '-t', 'gcr.io/$PROJECT_ID/swift-apis:latest',
+            '--cache-from', 'gcr.io/$PROJECT_ID/swift-apis:latest',
+            '.'
+        ]
+images: ['gcr.io/$PROJECT_ID/swift-apis:latest']
 timeout: 15000s
 
