--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,6 +10,7 @@ steps:
             'build',
             '-t', 'gcr.io/$PROJECT_ID/swift-apis:latest',
             '--cache-from', 'gcr.io/$PROJECT_ID/swift-apis:latest',
+            '-f', 'Dockerfile',
             '.'
         ]
 images: ['gcr.io/$PROJECT_ID/swift-apis:latest']
