--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,7 +4,7 @@ steps:
    args:
    - '-c'
    - |
-     docker pull gcr.io/$PROJECT_ID/swift-apis:latest || exit 0
+     'docker pull gcr.io/$PROJECT_ID/swift-apis:latest || exit 0'
 - name: 'gcr.io/cloud-builders/docker'
   args: [
             'build',
