--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,10 @@
 steps:
- - name: 'gcr.io/cloud-builders/docker'
-   entrypoint: 'bash'
-   args:
-   - '-c'
-   - |
-     'docker pull gcr.io/$PROJECT_ID/swift-apis:latest || exit 0'
+- name: 'gcr.io/cloud-builders/docker'
+  entrypoint: 'bash'
+  args:
+  - '-c'
+  - |
+    docker pull gcr.io/$PROJECT_ID/swift-apis:latest || exit 0
 - name: 'gcr.io/cloud-builders/docker'
   args: [
             'build',
