--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,11 @@
 steps:
-- name: 'gcr.io/cloud-builders/docker'
+- name: 'docker'
   entrypoint: 'bash'
   args:
   - '-c'
   - |
     docker pull gcr.io/$PROJECT_ID/swift-apis:latest || exit 0
-- name: 'gcr.io/cloud-builders/docker'
+- name: 'docker'
   args: [
             'build',
             '-t', 'gcr.io/$PROJECT_ID/swift-apis:latest',
