--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,7 +4,7 @@ steps:
   args:
   - '-c'
   - |
-    export DOCKER_BUILDKIT=1 || exit 0
+    export DOCKER_BUILDKIT=1
 - name: 'docker'
   args: [
             'build',
