--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,5 @@
 steps:
-- name: 'docker'
-  entrypoint: 'bash'
-  args:
-  - '-c'
-  - |
-    export DOCKER_BUILDKIT=1
-- name: 'docker'
+- name: 'DOCKER_BUILDKIT=1 docker'
   args: [
             'build',
             '-t', 'gcr.io/$PROJECT_ID/swift-apis:latest',
