--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,11 @@
 steps:
-- name: 'DOCKER_BUILDKIT=1 docker'
+- name: 'gcr.io/cloud_builders/docker'
+  entrypoint: 'bash'
+  args:
+  - '-c'
+  - |
+    export DOCKER_BUILDKIT=1
+- name: 'docker'
   args: [
             'build',
             '-t', 'gcr.io/$PROJECT_ID/swift-apis:latest',
