--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,9 +5,10 @@ steps:
   - '-c'
   - |
     export DOCKER_BUILDKIT=1
+    export DOCKER_CLI_EXPERIMENTAL=enabled
 - name: 'docker'
   args: [
-            'build',
+            'buildx', 'build',
             '-t', 'gcr.io/$PROJECT_ID/swift-apis:latest',
             '--cache-from', 'gcr.io/$PROJECT_ID/swift-apis:latest',
             '-f', 'Dockerfile',
