--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,7 +4,7 @@ steps:
   args:
   - '-c'
   - |
-    export DOCKER_BUILDKIT=1
+    export DOCKER_BUILDKIT=1 && \
     export DOCKER_CLI_EXPERIMENTAL=enabled
 - name: 'docker'
   args: [
