--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,7 +13,7 @@ steps:
             '.'
         ]
 options:
-  env: ['DOCKER_BUILDKIT=1', 'DOCKER_CLI_EXPERIMENTAL=enabled']
+  env: ['DOCKER_BUILDKIT=1']
 images: ['gcr.io/$PROJECT_ID/swift-apis:latest']
 timeout: 15000s
 
