--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,18 +1,12 @@
 steps:
-- name: 'gcr.io/cloud-builders/docker'
-  entrypoint: 'bash'
-  args:
-  - '-c'
-  - |
-    docker pull gcr.io/$PROJECT_ID/swift-apis:latest || exit 0
 - name: 'docker'
   args: [
             'build',
             '-t', 'gcr.io/$PROJECT_ID/swift-apis:latest',
-            '--cache-from', 'gcr.io/$PROJECT_ID/swift-apis:latest',
             '-f', 'Dockerfile',
             '.'
         ]
+options: ['DOCKER_BUILDKIT=1']
 images: ['gcr.io/$PROJECT_ID/swift-apis:latest']
 timeout: 15000s
 
