--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,8 @@ steps:
             '-f', 'Dockerfile',
             '.'
         ]
-options: ['DOCKER_BUILDKIT=1']
+options:
+    env: ['DOCKER_BUILDKIT=1']
 images: ['gcr.io/$PROJECT_ID/swift-apis:latest']
 timeout: 15000s
 
