--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
-- name: 'docker:19.3.10'
+- name: 'docker:latest'
   args: [
             'buildx', 'build',
             '-t', 'gcr.io/$PROJECT_ID/swift-apis:latest',
