--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,13 +1,13 @@
 steps:
 - name: 'docker:19.03.10'
   args: [
-            'buildx', 'build',
+            'build',
             '-t', 'gcr.io/$PROJECT_ID/swift-apis:latest',
             '-f', 'Dockerfile',
             '.'
         ]
 options:
-    env: ['DOCKER_CLI_EXPERIMENTAL=enabled']
+    env: ['DOCKER_BUILDKIT=1']
 images: ['gcr.io/$PROJECT_ID/swift-apis:latest']
 timeout: 15000s
 
