--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,13 +1,8 @@
 steps:
-- name: 'docker:19.03.10-dind'
-  args: [
-            'build',
-            '-t', 'gcr.io/$PROJECT_ID/swift-apis:latest',
-            '-f', 'Dockerfile',
-            '.'
-        ]
-options:
-    env: ['DOCKER_BUILDKIT=1']
-images: ['gcr.io/$PROJECT_ID/swift-apis:latest']
+- name: 'gcr.io/kaniko-project/executor:latest'
+  args:
+  - --destination=gcr.io/$PROJECT_ID/image
+  - --cache=true
+  - --cache-ttl=24h
 timeout: 15000s
 
