--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
-- name: 'gcr.io/cloud-builders/docker'
-  entrypoint: 'bash'
+- name: 'docker'
+  entrypoint: 'sh'
   args:
   - '-c'
   - |
@@ -9,7 +9,6 @@ steps:
   args: ['build',
          '-t', 'gcr.io/$PROJECT_ID/swift-apis:latest',
          '--cache-from', 'gcr.io/$PROJECT_ID/swift-apis:latest',
-         '-d', 'Dockerfile',
          '.']
 images: ['gcr.io/$PROJECT_ID/swift-apis:latest']
 timeout: 5400s
