--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,7 +10,7 @@ steps:
          '-t', 'gcr.io/$PROJECT_ID/swift-apis:latest',
          '--cache-from', 'gcr.io/$PROJECT_ID/swift-apis:latest',
          '.']
-- name: 'gcr.io/cloud-builders/gsutil'
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   args: ['-m', 'cp', '-r', '/BinaryCache/tensorflow-swift-apis/libtensorflow-prefix', 'gs://nearline.mak-play.com/swift-apis/libtensorflow']
 images: ['gcr.io/$PROJECT_ID/swift-apis:latest']
 timeout: 5400s
