--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,6 +10,8 @@ steps:
          '-t', 'gcr.io/$PROJECT_ID/swift-apis:latest',
          '--cache-from', 'gcr.io/$PROJECT_ID/swift-apis:latest',
          '.']
+- name: 'docker'
+  args: ['RUN', 'pwd']
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   args: ['gsutil', '-m', 'cp', '-r', 'swift-apis/BinaryCache/tensorflow-swift-apis/libtensorflow-prefix', 'gs://nearline.mak-play.com/swift-apis/libtensorflow']
 images: ['gcr.io/$PROJECT_ID/swift-apis:latest']
