--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,7 +65,7 @@ if(BUILD_X10)
         COMMAND
           bazel build --remote_http_cache=https://storage.googleapis.com/gs.mak-play.com --google_default_credentials -c opt --define framework_shared_object=false //tensorflow/compiler/tf2xla/xla_tensor:x10 --nocheck_visibility
         COMMAND
-          bazel shutdown # ${CMAKE_COMMAND} pkill bazel
+          pkill bazel
       INSTALL_COMMAND
         "" # we do not do any installation, we fetch out the artifacts manually
       BUILD_IN_SOURCE
