--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,14 +1,8 @@
 steps:
-- name: 'docker'
-  entrypoint: 'sh'
+- name: 'gcr.io/kaniko-project/executor:v0.19.0'
   args:
-  - '-c'
-  - |
-    docker pull gcr.io/$PROJECT_ID/swift-apis:latest || exit 0
-- name: 'docker'
-  args: ['build',
-         '-t', 'gcr.io/$PROJECT_ID/swift-apis:latest',
-         '--cache-from', 'gcr.io/$PROJECT_ID/swift-apis:latest',
-         '.']
-images: ['gcr.io/$PROJECT_ID/swift-apis:latest']
-timeout: 5400s
+  - --destination=gcr.io/$PROJECT_ID/image
+  - --cache=true
+  - --cache-ttl=48h
+timeout: 2400s
+
