CX10 as target link library for x10/ops_tests

--- a/Tests/x10/CMakeLists.txt
+++ b/Tests/x10/CMakeLists.txt
@@ -2,7 +2,8 @@ add_executable(ops_test
   ops_test.swift)
 target_link_libraries(ops_test PRIVATE
   x10
-  TensorFlow)
+  TensorFlow
+  CX10)
 add_test(NAME X10.Operations
   COMMAND ops_test)
 
