--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,13 +1,13 @@
 steps:
-- name: 'gcr.io/kaniko-project/executor:latest'
-  args:
-  - --destination=gcr.io/$PROJECT_ID/image
-  - --cache=true
-  - --cache-ttl=24h
-   env:
-    - name: AWS_ACCESS_KEY_ID
-      value: NOT_SET
-    - name: AWS_SECRET_KEY
-      value: NOT_SET
+  - name: 'gcr.io/kaniko-project/executor:latest'
+    args:
+      - '--destination=gcr.io/$PROJECT_ID/image'
+      - '--cache=true'
+      - '--cache-ttl=24h'
+    env:
+      - name: AWS_ACCESS_KEY_ID
+        value: NOT_SET
+      - name: AWS_SECRET_KEY
+        value: NOT_SET
 timeout: 15000s
 
