--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,8 +6,8 @@ steps:
       - '--cache-ttl=24h'
     env:
       - name: AWS_ACCESS_KEY_ID
-        value: NOT_SET
+        value: 'NOT_SET'
       - name: AWS_SECRET_KEY
-        value: NOT_SET
+        value: 'NOT_SET'
 timeout: 15000s
 
