--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,9 +5,7 @@ steps:
     - --cache=true
     - --cache-ttl=24h
     env:
-    - name: AWS_ACCESS_KEY_ID
-      value: NOT_SET
-    - name: AWS_SECRET_KEY
-      value: NOT_SET
+    - 'AWS_ACCESS_KEY_ID=NOT_SET'
+    - 'AWS_SECRET_KEY=NOT_SET'
 timeout: 15000s
 
